fix: 2 column layout gap is now only set for column-gap

--- a/_smartgear2.scss
+++ b/_smartgear2.scss
@@ -20,9 +20,9 @@ $z_header: 100 !default;
 body.cols--2{
   .mod_breadcrumb{@extend .container !optional;}
   #wrapper{overflow: hidden;}
-  #container{ display: flex; gap: $spacing; flex-wrap: wrap;
+  #container{ display: flex; column-gap: $spacing; flex-wrap: wrap;
     @include media-max(sm){}
-    @include media-max(xs){gap: $spacing/2;}
+    @include media-max(xs){column-gap: $spacing/2;}
   }
   #main{flex-basis: 60%; flex-grow: 1;}
   aside{flex-basis: 30%; flex-grow: 1; min-width: 250px; position: relative; display: flex; justify-content: center;
